Integrate endpoints
