# api/swagger.yaml
@@ -4,8 +4,7 @@ info:
   description: This is a basic Hospital Management Service
   version: 1.0.0
 servers:
-- url: https://petstore.swagger.io/v2
-- url: http://petstore.swagger.io/v2
+- url: http://localhost:7557/api/v1
 security:
 - bearerAuth: []
 tags:
@@ -19,11 +18,43 @@ tags:
   description: Can add/remove employees ie doctors, nurse, pharmacists and can see
     the reports.
 paths:
+  /login:
+    post:
+      summary: Authenticates the user logging in and provides a Bearer token.
+      operationId: login
+      requestBody:
+        description: username and password
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username: 
+                  type: string
+                password:
+                  type: string
+        required: true
+      responses:
+        200:
+          description: login success!
+          content: 
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Login'
+        401:
+          description: Invalid input
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Login'
+      x-swagger-router-controller: Auth
+  
   /patient:
     post:
       tags:
       - nurse
-      summary: Registers a new patient in the hospital.
+      - admin
+      summary: Registers a new patient in the hospital. 
       operationId: registerPatient
       requestBody:
         description: Patient Details
@@ -35,30 +66,49 @@ paths:
       responses:
         201:
           description: Created Successfully!
-          content: {}
-        405:
-          description: Invalid input
-          content: {}
-      x-swagger-router-controller: Nurse
-  /patient/{mId}:
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  data:
+                    type: object
+        409:
+          description: Already Exists
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  data:
+                    type: object
+        403:
+          description: Bearer token missing
+        401:
+          description: Unauthorized.
+      x-swagger-router-controller: ApiV1
+  
+  /patient/{mid}:
     get:
       tags:
       - nurse
       - doctor
       - pharmacist
+      - admin
       summary: Find patient by ID
       description: Returns a single patient
       operationId: getPatientById
       parameters:
-      - name: mId
+      - name: mid
         in: path
         description: ID of patient to return
         required: true
-        style: simple
-        explode: false
         schema:
           type: integer
-          format: int64
       responses:
         200:
           description: successful operation
@@ -66,50 +116,223 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Patient'
-        400:
-          description: Invalid ID supplied
-          content: {}
         404:
-          description: Patient not found
+          description: Patient Details not found
           content: {}
-      x-swagger-router-controller: Nurse
+        403:
+          description: Bearer token missing
+        401:
+          description: Unauthorized.
+      x-swagger-router-controller: ApiV1
     put:
       tags:
       - nurse
       - doctor
       - pharmacist
+      - admin
       summary: Updates patient details of the hospital.
       operationId: updatePatientDetails
       parameters:
-      - name: mId
+      - name: mid
         in: path
         description: Patient id to update
         required: true
-        style: simple
-        explode: false
         schema:
           type: integer
-          format: int64
       requestBody:
-        description: Patient object that needs to be updated
+        description: Patient object that needs to be updated. Differen roles can update different fields only.
         content:
           application/json:
             schema:
               $ref: '#/components/schemas/Patient'
         required: true
       responses:
-        400:
+        200:
           description: Invalid ID supplied
           content: {}
         404:
-          description: Pet not found
+          description: Patient Details not found
           content: {}
-        405:
-          description: Validation exception
+      x-swagger-router-controller: ApiV1
+
+  /patient/{mid}/prescription:
+    get:
+      tags:
+      - nurse
+      - doctor
+      - pharmacist
+      - admin
+      summary: Get All prescriptions for a patient
+      description: Returns a list of prescriptions for a patient
+      parameters:
+      - name: mid
+        in: path
+        description: ID of patient
+        required: true
+        schema:
+          type: integer
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Prescription'
+        404:
+          description: Patient not found/ Prescription not found
           content: {}
-      x-swagger-router-controller: Nurse
+        403:
+          description: Bearer token missing
+        401:
+          description: Unauthorized.
+      x-swagger-router-controller: ApiV1
+    
+
+      
+  /patient/{mid}/prescription/{id}:
+    get:
+      tags:
+      - nurse
+      - doctor
+      - pharmacist
+      - admin
+      summary: Find prescription by ID
+      description: Returns a single prescription
+      parameters:
+      - name: mid
+        in: path
+        description: ID of patient to return
+        required: true
+        schema:
+          type: integer
+      - name: id
+        in: path
+        description: ID of prescription to return
+        required: true
+        schema:
+          type: integer
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Prescription'
+        404:
+          description: Patient Details not found
+          content: {}
+        403:
+          description: Bearer token missing
+        401:
+          description: Unauthorized.
+      x-swagger-router-controller: ApiV1
+      
+    post:
+      tags:
+      - nurse
+      - admin
+      summary: Digitize prescriptions for already existing patient.
+      parameters:
+        - name: mid
+          in: path
+          description: ID of patient
+          required: true
+          schema:
+            type: integer
+        - name: id
+          in: path
+          description: ID of prescription to return
+          required: true
+          schema:
+            type: integer
+      operationId: digitizePrescription
+      requestBody:
+        description: Prescriptions
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Prescription'
+        required: true
+      responses:
+        201:
+          description: Created Successfully!
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  data:
+                    type: object
+        409:
+          description: Already Exists
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  data:
+                    type: object
+        403:
+          description: Bearer token missing
+        401:
+          description: Unauthorized.
+      x-swagger-router-controller: ApiV1
+    
+    put:
+      tags:
+      - nurse
+      - doctor
+      - pharmacist
+      - admin
+      summary: Updates patient details of the hospital.
+      parameters:
+      - name: mid
+        in: path
+        description: Patient id to update
+        required: true
+        schema:
+          type: integer
+      - name: id
+        in: path
+        description: ID of prescription to return
+        required: true
+        schema:
+          type: integer
+      requestBody:
+        description: Patient object that needs to be updated. Differen roles can update different fields only.
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Patient'
+        required: true
+      responses:
+        200:
+          description: Invalid ID supplied
+          content: {}
+        404:
+          description: Patient Details not found
+          content: {}
+      x-swagger-router-controller: ApiV1    
 components:
+  responses:
+    UnauthorizedError:
+      description: Access token is missing or invalid
   schemas:
+    Login:
+      type: object
+      properties:
+        success:
+          type: boolean
+        token:
+          type: string
+        message:
+          type: string
     Patient:
       type: object
       properties:
@@ -124,6 +347,11 @@ components:
           type: integer
         mobile:
           type: string
+    Prescription:
+      type: object
+      properties:
+        id:
+          type: integer
         prescription:
           type: array
           items:
@@ -131,16 +359,7 @@ components:
         prescription_approved:
           type: boolean
           default: false
-      example:
-        prescription_approved: false
-        prescription:
-        - prescription
-        - prescription
-        mobile: mobile
-        mid: 0
-        fullname: fullname
-        email: email
-        age: 6
+
   securitySchemes:
     hospital_auth:
       type: http
