# src/routes/index.js
@@ -1,6 +1,0 @@
-import {login, register} from '../controllers/auth';
-
-export const set = (app) => {
-  app.post('/login', login);
-  app.post('/register', register);
-};
