# src/routes/patient.js
@@ -1,11 +1,0 @@
-// import { Router } from 'express';
-// import "@babel/polyfill"
-// import { getPatient, registerPatient, updatePatient } from '../controllers/patient.controller';
-
-// const router = Router();
-
-// router.get("/:mid", getPatient)
-// router.post('/', registerPatient);
-// router.put('/:mid', updatePatient);
-
-// export default router;
